// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Timeline default renders correctly 1`] = `
<jest>
  <ol
    class="bcl-timeline"
  >
    <li>
      <p
        class="fs-5 mb-1 fw-medium"
      >
        13 September 2017
      </p>
      <p
        class="fs-6 mb-1 fw-medium"
      >
        Item title
      </p>
      <div>
        <a
          href="/example.html"
        >
          President Juncker's State of the Union speech
        </a>
      </div>
    </li>
    <li>
      <p
        class="fs-5 mb-1 fw-medium"
      >
        28-29 September 2017
      </p>
      <div>
        <a
          href="/example.html"
        >
          Informal Digital Summit, Tallinn
        </a>
      </div>
    </li>
    <li>
      <p
        class="fs-5 mb-1 fw-medium"
      >
        14 November 2017
      </p>
      <div>
        Strengthening European identity through education and culture: European Commission's contribution to the Leaders' meeting.
      </div>
    </li>
    <li>
      <p
        class="fs-5 mb-1 fw-medium"
      >
        17 November 2017
      </p>
      <div>
        <a
          href="/example.html"
        >
          Social Summit in Gothenburg, Sweden
        </a>
      </div>
    </li>
    <li>
      <p
        class="fs-5 mb-1 fw-medium"
      >
        6 December 2017
      </p>
      <div>
        <a
          href="/example.html"
        >
          Economic and Monetary Union package of proposals
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        14-15 December 2017
      </p>
      <div>
        <a
          href="/example.html"
        >
          EU Leaders' meeting on migration, Brussels
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        15 December 2017
      </p>
      <div>
        <a
          href="/example.html"
        >
          Euro Summit
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        6 February 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          EU-Western Balkans Strategy
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        14 February 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          Multiannual Financial Framework
        </a>
         and 
        <a
          href="/example.html"
        >
          institutional issues
        </a>
         - enhancing efficiency at the helm of the European Union
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        23 February 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          Informal European Council
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        22-23 March 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          European Council
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        2 May 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          Commission proposal: Long-term budget post-2020
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        15 May 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          European Commission’s contribution to the Informal Leaders' meeting
        </a>
        , Sofia, Bulgaria (16 May 2018)
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        17 May 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          EU-Western Balkans Summit
        </a>
         (Sofia, Bulgaria)
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        23 May 2018
      </p>
      <div>
        Progress by Member States in meeting the conditions for adopting the euro - 
        <a
          href="/example.html"
        >
          reports
        </a>
         by the European Commission and ECB
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        23 May 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          European Semester
        </a>
        : European Commission publishes economic policy guidance for Member States
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        29 May - 14 June 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          EU budget for the future
        </a>
        : European Commission's legislative proposals for spending programmes
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        28-29 June 2018
      </p>
      <div>
        Commission contribution to the European Council: 
        <a
          href="/example.html"
        >
          Economic and Monetary Union, migration, EU budget for the future
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        10 July 2018
      </p>
      <div>
        Ways to enhance subsidiarity, proportionality and better regulation in the daily operations of the EU: 
        <a
          href="/example.html"
        >
          Report
        </a>
         by the Task Force chaired by Commission First Vice-President Timmermans
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        12 September 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          President Juncker's State of the Union speech
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        20 September 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          Informal European Council/Meeting of EU27 (Salzburg, Austria)
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        18 October 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          European Council meeting
        </a>
        , Brussels
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        21 November 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          European Semester
        </a>
        : setting the economic and social priorities
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        28 November 2018
      </p>
      <div>
        Commission contribution to the European Council on 
        <a
          href="/example.html"
        >
          Capital Markets Union and Banking Union
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        04 December 2018
      </p>
      <div>
        Commission contribution to the European Council on 
        <a
          href="/example.html"
        >
          long-term EU budget
        </a>
         and 
        <a
          href="/example.html"
        >
          migration
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        05 December 2018
      </p>
      <div>
        Commission contribution to the European Council on the 
        <a
          href="/example.html"
        >
          international role of the euro
        </a>
         and the 
        <a
          href="/example.html"
        >
          Action Plan on disinformation
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        11 December 2018
      </p>
      <div>
        Commission contribution to the European Council on the 
        <a
          href="/example.html"
        >
          Citizens' Dialogues
        </a>
      </div>
    </li>
    <li
      class="bcl-timeline__item--toggle"
    >
      <button
        aria-expanded="false"
        class="btn btn-light btn-md"
        data-bs-target=".collapse-1"
        data-bs-toggle="collapse"
        type="button"
      >
        <span
          class="label-collapsed"
        >
          Show 22 more items
        </span>
        <span
          class="label-expanded"
        >
          Hide 22 items
        </span>
        <svg
          class="ms-2-5 bi icon--fluid"
        >
          <use
            xlink:href="/icons.svg#chevron-down"
          />
        </svg>
      </button>
    </li>
    <li>
      <p
        class="fs-5 mb-1 fw-medium"
      >
        11 December 2018
      </p>
      <div>
        Commission contribution to the Euro Summit
      </div>
    </li>
    <li>
      <p
        class="fs-5 mb-1 fw-medium"
      >
        13-14 December 2018
      </p>
      <p
        class="fs-6 mb-1 fw-medium"
      >
        Item title
      </p>
      <div>
        European Council and Euro Summit
      </div>
    </li>
  </ol>
</jest>
`;

exports[`OE - Timeline default renders correctly 2`] = `
<jest>
  <ol
    class="bcl-timeline"
  >
    <li
      class="new-class"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        13 September 2017
      </p>
      <p
        class="fs-6 mb-1 fw-medium"
      >
        Item title
      </p>
      <div>
        <a
          href="/example.html"
        >
          President Juncker's State of the Union speech
        </a>
      </div>
    </li>
    <li
      class="new-class"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        13 September 2017
      </p>
      <p
        class="fs-6 mb-1 fw-medium"
      >
        Item title
      </p>
      <div>
        <a
          href="/example.html"
        >
          President Juncker's State of the Union speech
        </a>
      </div>
    </li>
    <li
      class="new-class collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        13 September 2017
      </p>
      <p
        class="fs-6 mb-1 fw-medium"
      >
        Item title
      </p>
      <div>
        <a
          href="/example.html"
        >
          President Juncker's State of the Union speech
        </a>
      </div>
    </li>
    <li
      class="bcl-timeline__item--toggle"
    >
      <button
        aria-expanded="false"
        class="btn btn-light btn-md"
        data-bs-target=".collapse-1"
        data-bs-toggle="collapse"
        type="button"
      >
        <span
          class="label-collapsed"
        >
          Show 1 more items
        </span>
        <span
          class="label-expanded"
        >
          Hide 1 items
        </span>
        <svg
          class="ms-2-5 bi icon--fluid"
        >
          <use
            xlink:href="/icons.svg#chevron-down"
          />
        </svg>
      </button>
    </li>
    <li
      class="new-class"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        13 September 2017
      </p>
      <p
        class="fs-6 mb-1 fw-medium"
      >
        Item title
      </p>
      <div>
        <a
          href="/example.html"
        >
          President Juncker's State of the Union speech
        </a>
      </div>
    </li>
  </ol>
</jest>
`;

exports[`OE - Timeline default renders correctly with title and link 1`] = `
<jest>
  <h6
    class="mb-4 bcl-heading"
  >
    <a
      class="standalone"
      href="/example.html"
    >
      Link label
    </a>
  </h6>
  <ol
    class="bcl-timeline"
  >
    <li>
      <p
        class="fs-5 mb-1 fw-medium"
      >
        13 September 2017
      </p>
      <p
        class="fs-6 mb-1 fw-medium"
      >
        Item title
      </p>
      <div>
        <a
          href="/example.html"
        >
          President Juncker's State of the Union speech
        </a>
      </div>
    </li>
    <li>
      <p
        class="fs-5 mb-1 fw-medium"
      >
        28-29 September 2017
      </p>
      <div>
        <a
          href="/example.html"
        >
          Informal Digital Summit, Tallinn
        </a>
      </div>
    </li>
    <li>
      <p
        class="fs-5 mb-1 fw-medium"
      >
        14 November 2017
      </p>
      <div>
        Strengthening European identity through education and culture: European Commission's contribution to the Leaders' meeting.
      </div>
    </li>
    <li>
      <p
        class="fs-5 mb-1 fw-medium"
      >
        17 November 2017
      </p>
      <div>
        <a
          href="/example.html"
        >
          Social Summit in Gothenburg, Sweden
        </a>
      </div>
    </li>
    <li>
      <p
        class="fs-5 mb-1 fw-medium"
      >
        6 December 2017
      </p>
      <div>
        <a
          href="/example.html"
        >
          Economic and Monetary Union package of proposals
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        14-15 December 2017
      </p>
      <div>
        <a
          href="/example.html"
        >
          EU Leaders' meeting on migration, Brussels
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        15 December 2017
      </p>
      <div>
        <a
          href="/example.html"
        >
          Euro Summit
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        6 February 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          EU-Western Balkans Strategy
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        14 February 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          Multiannual Financial Framework
        </a>
         and 
        <a
          href="/example.html"
        >
          institutional issues
        </a>
         - enhancing efficiency at the helm of the European Union
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        23 February 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          Informal European Council
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        22-23 March 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          European Council
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        2 May 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          Commission proposal: Long-term budget post-2020
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        15 May 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          European Commission’s contribution to the Informal Leaders' meeting
        </a>
        , Sofia, Bulgaria (16 May 2018)
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        17 May 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          EU-Western Balkans Summit
        </a>
         (Sofia, Bulgaria)
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        23 May 2018
      </p>
      <div>
        Progress by Member States in meeting the conditions for adopting the euro - 
        <a
          href="/example.html"
        >
          reports
        </a>
         by the European Commission and ECB
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        23 May 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          European Semester
        </a>
        : European Commission publishes economic policy guidance for Member States
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        29 May - 14 June 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          EU budget for the future
        </a>
        : European Commission's legislative proposals for spending programmes
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        28-29 June 2018
      </p>
      <div>
        Commission contribution to the European Council: 
        <a
          href="/example.html"
        >
          Economic and Monetary Union, migration, EU budget for the future
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        10 July 2018
      </p>
      <div>
        Ways to enhance subsidiarity, proportionality and better regulation in the daily operations of the EU: 
        <a
          href="/example.html"
        >
          Report
        </a>
         by the Task Force chaired by Commission First Vice-President Timmermans
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        12 September 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          President Juncker's State of the Union speech
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        20 September 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          Informal European Council/Meeting of EU27 (Salzburg, Austria)
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        18 October 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          European Council meeting
        </a>
        , Brussels
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        21 November 2018
      </p>
      <div>
        <a
          href="/example.html"
        >
          European Semester
        </a>
        : setting the economic and social priorities
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        28 November 2018
      </p>
      <div>
        Commission contribution to the European Council on 
        <a
          href="/example.html"
        >
          Capital Markets Union and Banking Union
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        04 December 2018
      </p>
      <div>
        Commission contribution to the European Council on 
        <a
          href="/example.html"
        >
          long-term EU budget
        </a>
         and 
        <a
          href="/example.html"
        >
          migration
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        05 December 2018
      </p>
      <div>
        Commission contribution to the European Council on the 
        <a
          href="/example.html"
        >
          international role of the euro
        </a>
         and the 
        <a
          href="/example.html"
        >
          Action Plan on disinformation
        </a>
      </div>
    </li>
    <li
      class="collapse collapse-1"
    >
      <p
        class="fs-5 mb-1 fw-medium"
      >
        11 December 2018
      </p>
      <div>
        Commission contribution to the European Council on the 
        <a
          href="/example.html"
        >
          Citizens' Dialogues
        </a>
      </div>
    </li>
    <li
      class="bcl-timeline__item--toggle"
    >
      <button
        aria-expanded="false"
        class="btn btn-light btn-md"
        data-bs-target=".collapse-1"
        data-bs-toggle="collapse"
        type="button"
      >
        <span
          class="label-collapsed"
        >
          Show 22 more items
        </span>
        <span
          class="label-expanded"
        >
          Hide 22 items
        </span>
        <svg
          class="ms-2-5 bi icon--fluid"
        >
          <use
            xlink:href="/icons.svg#chevron-down"
          />
        </svg>
      </button>
    </li>
    <li>
      <p
        class="fs-5 mb-1 fw-medium"
      >
        11 December 2018
      </p>
      <div>
        Commission contribution to the Euro Summit
      </div>
    </li>
    <li>
      <p
        class="fs-5 mb-1 fw-medium"
      >
        13-14 December 2018
      </p>
      <p
        class="fs-6 mb-1 fw-medium"
      >
        Item title
      </p>
      <div>
        European Council and Euro Summit
      </div>
    </li>
  </ol>
</jest>
`;
